make sure icons are aligned when the active class is set

--- a/src/app/shared/components/side-bar/side-bar.component.scss
+++ b/src/app/shared/components/side-bar/side-bar.component.scss
@@ -9,6 +9,10 @@
 .flex-column .active {
   border-left: 5px solid theme-color('success');
 }
+.flex-column .active i,img {
+   margin-left: -5px;
+  }
+
 .sidebar-sticky {
   height: 100%;
 }
